--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@solana/web3.js": "^1.95.3",
     "bip39": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ed25519-hd-key": "^1.3.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "tweetnacl": "^1.0.3",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
