--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "ed25519-hd-key": "^1.3.0",
+    "ethers": "^6.13.2",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "react": "^18",
